--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ h1{
 
 .controls {
     position: absolute;
-    top: 0;
+    top: -5rem;
     left: 0;
     right: 0;
     bottom: 0;
@@ -74,7 +74,7 @@ h1{
     flex-direction: column;
 }
 /* 
-@media (max-width:720px){
+@media only screen and (max-width:720px){
     h1{
         font-size: 3rem;
     }
