--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ html {
 }
 
 h1{
+    margin-top: 6rem;
     font-size: 5rem;
     color: #AC7D88;
 }
@@ -66,18 +67,24 @@ h1{
 .controls {
     position: absolute;
     top: -5rem;
-    left: 0;
+    left:0;
     right: 0;
     bottom: 0;
-    display: flex;
+    /* display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
+    flex-direction: column; */
+    display: grid;
+    grid-template-columns: min-content;
+    grid-template-rows: repeat(2, min-content);
+    align-content: center;
+    justify-content: center;
 }
 
-@media only screen and (max-width: 500px) {
-    top: -5rem;
-    left: -2rem;
+@media only screen and (max-width: 550px){
+
+    .controls {
+        top: -5rem;
+        left:-2rem;
+    }
 }
-
-
