--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
-    background-color: #fdf9ef;
+/*     background-color: #fdf9ef; */
+    background-color: #fff;
     font-family: 'Inconsolata', monospace;
 }
 html {
