--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
+
 body {
-/*     background-color: #fdf9ef; */
+    background-color: #fdf9ef;
     background-color: #fff;
     font-family: 'Inconsolata', monospace;
 }
@@ -61,8 +62,8 @@ h1{
 
 .controls {
     position: absolute;
-    top: -5rem;
-    left: -2rem;
+    top: -3rem;
+    left: -1rem;
     right: 0;
     bottom: 0;
     /* display: flex;
@@ -75,3 +76,10 @@ h1{
     align-content: center;
     justify-content: center;
 }
+
+/* @media only screen and (max-width: 550px){
+    .controls {
+        top: -5rem;
+        left: -2rem;
+    }
+} */
