--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 
 body {
     background-color: #fdf9ef;
-    background-color: #fff;
     font-family: 'Inconsolata', monospace;
 }
 html {
@@ -62,8 +61,8 @@ h1{
 
 .controls {
     position: absolute;
-    top: -3rem;
-    left: -1rem;
+    top: -2rem;
+    left: 0;
     right: 0;
     bottom: 0;
     /* display: flex;
@@ -77,9 +76,3 @@ h1{
     justify-content: center;
 }
 
-/* @media only screen and (max-width: 550px){
-    .controls {
-        top: -5rem;
-        left: -2rem;
-    }
-} */
